update css for view tab to fix bug text too long make ui broken

--- a/Kuyam-home/public/content/style.css
+++ b/Kuyam-home/public/content/style.css
@@ -5505,7 +5505,8 @@ only screen and (               min-resolution:2dppx)      and (min-width:320px)
   color: rgba(51, 50, 50, 0.9); }
 
 .view-list .item p strong {
-  font-weight: 700; }
+  font-weight: 700;
+  word-wrap: break-word; }
 
 .view-list .item .btn {
   width: 103px;
