--- a/Kuyam-home/src/assets/css/sass/pages/book-details/_views.scss
+++ b/Kuyam-home/src/assets/css/sass/pages/book-details/_views.scss
@@ -30,6 +30,7 @@
 }
 .view-list .item p strong{
     font-weight: 700;
+    word-wrap: break-word;
 }
 .view-list .item .btn{
     width: 103px;
